# xfce4-sensors-plugin

./: .gitignore  .scan-build-false-positives  AUTHORS  ChangeLog  KNOWN_BUGS  Makefile  Makefile.am  Makefile.in  NEWS  NOTES  README  TODO  aclocal.m4  autogen.sh  build-combinations.sh  config.h  config.h.in  config.status  configure  configure.ac  configure.ac.in  configure.in  configure.in.in  libtool  meson.build  meson_options.txt  module.xml  xfce4-sensors-plugin.spec  xfce4-sensors-plugin.spec.in
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
doc/: doxygen.cfg
icons/: Makefile  Makefile.am  Makefile.in  meson.build
include/: Makefile  Makefile.am  Makefile.in  acpi.h  configuration.h  cpu.h  hddtemp.h  lmsensors.h  middlelayer.h  nvidia.h  sensors-interface-common.h  sensors-interface-plugin.h  sensors-interface-types.h  sensors-interface.h  tacho.h  types.h
lib/: Makefile  Makefile.am  Makefile.in  acpi.c  acpi.cc  configuration.c  configuration.cc  cpu.c  hddtemp.c  hddtemp.cc  helpers.c  libxfce4sensors-1.0.pc  libxfce4sensors-1.0.pc.in  lmsensors.c  lmsensors.cc  meson.build  middlelayer.c  middlelayer.cc  nvidia.c  nvidia.cc  sensors-interface-common.c  sensors-interface-common.cc  sensors-interface.c  sensors-interface.cc  tacho.c  tacho.cc
panel-plugin/: Makefile  Makefile.am  Makefile.am.orig  Makefile.in  acpi.c  acpi.h  configuration.c  configuration.h  hddtemp.c  hddtemp.h  libxfce4-sensors-plugin.la  libxfce4_sensors_plugin_la-sensors-plugin.lo  lmsensors.c  lmsensors.h  meson.build  middlelayer.c  middlelayer.h  options.dialog.c  options.dialog.h  plugin.c  plugin.h  sensors-plugin.c  sensors-plugin.c.orig  sensors-plugin.cc  sensors-plugin.h  sensors.c  sensors.h  types.h  xfce4-sensors-plugin.css  xfce4-sensors-plugin.desktop  xfce4-sensors-plugin.desktop.in  xfce4-sensors-plugin.desktop.in.in
po/: ChangeLog  LINGUAS  Makefile  Makefile.in  Makefile.in.in  POTFILES  POTFILES.in  am.po  ar.po  ast.po  be.po  bg.po  ca.po  cs.po  da.po  de.gmo  de.po  el.gmo  el.po  en_AU.po  en_GB.po  es.po  et.po  eu.po  fi.po  fr.gmo  fr.po  gl.po  he.po  hr.po  hu.po  hy_AM.po  hye.po  id.po  ie.po  is.po  it.po  ja.po  ka.po  kk.po  (+33 more)
src/: Makefile  Makefile.am  Makefile.in  actions.c  actions.cc  actions.h  callbacks.c  callbacks.cc  callbacks.h  interface.c  interface.cc  interface.h  main.c  main.cc  meson.build  xfce4-sensors  xfce4-sensors.1  xfce4-sensors.desktop  xfce4-sensors.desktop.in
src/.deps/: xfce4_sensors-actions.Po  xfce4_sensors-callbacks.Po  xfce4_sensors-interface.Po  xfce4_sensors-main.Po
src/.libs/: xfce4-sensors
xfce4++/: Makefile.am  util.h
xfce4++/util/: Makefile.am  gtk.h  meson.build
