# $Id$

hicolor64dir = $(datadir)/icons/hicolor/64x64/apps
hicolor48dir = $(datadir)/icons/hicolor/48x48/apps
hicolor32dir = $(datadir)/icons/hicolor/32x32/apps
hicolor24dir = $(datadir)/icons/hicolor/24x24/apps
hicolorscalabledir = $(datadir)/icons/hicolor/scalable/apps

hicolor24_DATA = \
	24x24/xfce-sensors.png 

hicolor32_DATA = \
	32x32/xfce-sensors.png 

hicolor48_DATA = \
	48x48/xfce-sensors.png 

hicolor64_DATA = \
	64x64/xfce-sensors.png 

hicolorscalable_DATA = \
	scalable/xfce-sensors.svg

EXTRA_DIST = \
	$(hicolor24_DATA) \
	$(hicolor32_DATA) \
	$(hicolor48_DATA) \
	$(hicolor64_DATA) \
	$(hicolorscalable_DATA) \
	meson.build \
	$(NULL)
