
EXTRA_DIST = 									\
	acpi.h										\
	hddtemp.h									\
	tacho.h										\
	Makefile.am									\
	sensors-interface-common.h					\
	sensors-interface-plugin.h					\
	sensors-interface-types.h					\
	types.h										\
	configuration.h								\
	lmsensors.h									\
	middlelayer.h								\
	sensors-interface.h 						\
	nvidia.h

# vi:set ts=4 sw=4 noet ai nocindent syntax=automake:
